plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'raisetech'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// Lombok適用時に追加
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // SpringBoot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // OpenAPI Generator
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

    // 便利機能、ユーティリティ
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MySQLドライバ
    runtimeOnly 'com.mysql:mysql-connector-j'

    // MyBatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'

    // APサーバー（Tomcat）
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    // SpringBoot Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // MyBatis Test
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
    // H2（InMemoryDB)
    testImplementation 'com.h2database:h2:2.3.232'

    // jackson
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
